# bristol_fsai_sim-docker

./: README.md  names.txt
.devcontainer/: Dockerfile  devcontainer.json
eufs_sim/control/: package.xml  setup.py
eufs_sim/control/control/: control.py
eufs_sim/control_cpp/: CMakeLists.txt  package.xml
eufs_sim/control_cpp/include/control_cpp/: cone.hpp  cone_colors.hpp  control.hpp  spline.h
eufs_sim/control_cpp/src/: cone.cpp  control.cpp  odometry_to_twist_converter.cpp
eufs_sim/eufs_launcher/config/: default.rviz  eufs_launcher.yaml
eufs_sim/eufs_launcher/launch/: bristol_fsai.launch.py  eufs_launcher.launch.py  hardware.launch.py  simulation.launch.py
eufs_sim/eufs_plugins/gazebo_cone_plugins/src/: gazebo_ground_truth_cones.cpp
eufs_sim/eufs_rqt/: plugin.xml  setup.py
eufs_sim/eufs_rqt/config/: topics_frequency.perspective  topics_frequency_config.yaml
eufs_sim/eufs_rqt/src/eufs_rqt/: EUFSRobotSteeringGUI.py  topic_frequency_monitor.py
eufs_sim/eufs_sensors/urdf/: VLP-16R.urdf.xacro  zed.urdf.xacro
eufs_sim/perception/: package.xml  requirements.txt  setup.py
eufs_sim/perception/config/: perception_params.yaml
eufs_sim/perception/perception/: ConePositionEstimator.py  DepthExtractionStrategy.py  YOLONode.py
eufs_sim/perception/perception/utils/: PerceptionLogger.py  buildYOLOTensorRT.py  load_config.py
